--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.1",
+    "axios": "^1.13.2",
+    "jwt-decode": "^4.0.0",
+    "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "eslint-config-next": "16.1.0",
     "tailwindcss": "^4"
   }
 }
