--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=courseManagementSystem
+
+# DataSource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/coursesdb
+spring.datasource.username=your_username
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=10
+# Hibernate configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#loging
+logging.level.com.zaxxer.hikari.HikariDataSource=DEBUG
+logging.level.com.zaxxer.hikari=TRACE
+# Server configuration
+server.port=8080
+#creditioal
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+upload.directory=uploads/company
+# ssl config
+server.ssl.key-store=classpath:myapp.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=myalias
