--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^1.13.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
